cpu1: add specialized loss and matmul epilogues