@@ -1,15 +1,13 @@
 package backend.cpu.lowering;
 
 import graph.compile.descriptor.CompiledTensorDescriptorBuilder;
-import graph.compile.descriptor.CompiledTensorDescriptorIndex;
 import graph.compile.intent.BackendIntentPlan;
 
 import backend.ComputeBackend;
 import backend.blas.BlasProvider;
-import backend.blas.OpenBlasRuntime;
 import backend.cpu.fused.plan.FusedOperationPreparation;
 import backend.lowering.region.CpuFusedRegionPayload;
-import backend.lowering.region.CpuNativeRegionPayload;
+import backend.lowering.region.CpuSpecializedPrimitivePayload;
 import backend.lowering.region.RegionExecutionPlan;
 import backend.lowering.BackendCapabilities;
 import backend.lowering.LoweredRegion;
@@ -34,12 +32,9 @@ import graph.compile.planning.partition.PartitionTarget;
 import graph.compile.planning.partition.PartitionValue;
 import graph.compile.planning.value.GraphValueRef;
 import graph.compile.planning.region.DefaultRegionOptimizer;
-import graph.compile.planning.region.ExecutionUnit;
-import graph.compile.planning.region.ExecutionUnitKind;
 import graph.compile.planning.region.OptimizedRegion;
 import graph.compile.planning.region.RegionOptimizationContext;
-import graph.compile.planning.region.RegionOptimizationTrace;
-import org.junit.jupiter.api.Assumptions;
+import graph.compile.planning.region.specialization.RegionSpecializationKind;
 import org.junit.jupiter.api.Test;
 import operations.Operation;
 import tensor.DataType;
@@ -87,7 +82,7 @@ class CpuRegionLowererTest {
     }
 
     @Test
-    void lowersSingleMatmulUnitToBlasWhenBlasIsEnabledAndWorkIsLargeEnough() {
+    void lowersMatmulReluSpecializationToDirectKernelWhenBlasIsEnabledAndWorkIsLargeEnough() {
         Tensor a = new Tensor(new float[128 * 256], new int[]{128, 256}, null, "a", DataType.FLOAT32);
         Tensor b = new Tensor(new float[256 * 512], new int[]{256, 512}, null, "b", DataType.FLOAT32);
         Tensor matmul = a.matmul(b);
@@ -124,13 +119,67 @@ class CpuRegionLowererTest {
                 new LoweringContext(blasRuntime, compiledNodes, CompiledTensorDescriptorBuilder.build(compiledNodes), java.util.Map.of())
         ));
 
-        assertEquals(backend.lowering.LoweringFamily.BLAS, result.loweredRegion().units().getFirst().loweringFamily());
+        assertEquals(backend.lowering.LoweringFamily.DIRECT_KERNEL, result.loweredRegion().units().getFirst().loweringFamily());
+        RegionExecutionPlan regionPlan = assertInstanceOf(
+                RegionExecutionPlan.class,
+                result.loweredRegion().units().getFirst().artifact()
+        );
+        CpuSpecializedPrimitivePayload payload = assertInstanceOf(
+                CpuSpecializedPrimitivePayload.class,
+                regionPlan.backendPayload()
+        );
+        assertEquals(RegionSpecializationKind.MATMUL_RELU, payload.kind());
+        assertEquals("CPU1_MATMUL_RELU", regionPlan.executionGroups().getFirst().physicalKernel());
     }
 
     @Test
-    void cpuNativeProfileLowersProviderBackedPartitionToNativeRegion() {
-        Assumptions.assumeTrue(OpenBlasRuntime.isFloat32GemmAvailable(), OpenBlasRuntime.unavailableReason());
+    void lowersMatmulBiasReluSpecializationToCpu1DirectKernel() {
+        Tensor a = new Tensor(new float[128 * 256], new int[]{128, 256}, null, "a", DataType.FLOAT32);
+        Tensor b = new Tensor(new float[256 * 512], new int[]{256, 512}, null, "b", DataType.FLOAT32);
+        Tensor bias = new Tensor(new float[512], new int[]{512}, null, "bias", DataType.FLOAT32);
+        Tensor matmul = a.matmul(b);
+        Tensor add = matmul.add(bias);
+        Tensor out = add.relu();
 
+        List<Tensor> graph = out.topologicalSort();
+        List<CompiledNode> compiledNodes = CompiledNode.snapshot(graph, BackendIntentPlan.empty());
+        int matmulNodeId = nodeId(compiledNodes, Operation.OpType.MATMUL);
+        int addNodeId = nodeId(compiledNodes, Operation.OpType.ADD);
+        int reluNodeId = nodeId(compiledNodes, Operation.OpType.RELU);
+        List<Integer> selectedNodeIds = List.of(matmulNodeId, addNodeId, reluNodeId);
+        Partition partition = partition(
+                "cpu-matmul-bias-relu",
+                PartitionTarget.CPU,
+                selectedNodeIds,
+                externalInputNodeIds(compiledNodes, selectedNodeIds),
+                List.of(GraphValueRef.node(reluNodeId)),
+                List.of(GraphValueRef.node(reluNodeId))
+        );
+        OptimizedRegion region = new DefaultRegionOptimizer().optimize(partition, new RegionOptimizationContext(compiledNodes, FuseConfig.inferenceDefaults()));
+
+        CpuRegionLowerer lowerer = new CpuRegionLowerer();
+        LoweringResult result = lowerer.lower(new LoweringRequest(
+                region,
+                MemoryPlanner.plan(graph),
+                new BackendCapabilities(Set.of(ComputeBackend.CPU)),
+                new LoweringContext(openBlasRuntime(CpuStorageProfile.AUTO), compiledNodes, CompiledTensorDescriptorBuilder.build(compiledNodes), java.util.Map.of())
+        ));
+
+        assertEquals(backend.lowering.LoweringFamily.DIRECT_KERNEL, result.loweredRegion().units().getFirst().loweringFamily());
+        RegionExecutionPlan regionPlan = assertInstanceOf(
+                RegionExecutionPlan.class,
+                result.loweredRegion().units().getFirst().artifact()
+        );
+        CpuSpecializedPrimitivePayload payload = assertInstanceOf(
+                CpuSpecializedPrimitivePayload.class,
+                regionPlan.backendPayload()
+        );
+        assertEquals(RegionSpecializationKind.MATMUL_ADD_BIAS_RELU, payload.kind());
+        assertEquals("CPU1_MATMUL_ADD_BIAS_RELU", regionPlan.executionGroups().getFirst().physicalKernel());
+    }
+
+    @Test
+    void cpuNativeProfileUsesCpu1MatmulReluSpecializationForExactPostOpPartition() {
         Tensor a = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "a", DataType.FLOAT32);
         Tensor b = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "b", DataType.FLOAT32);
         Tensor out = a.matmul(b).relu();
@@ -157,208 +206,13 @@ class CpuRegionLowererTest {
 
         LoweredRegion lowered = result.loweredRegion();
         assertEquals(1, lowered.units().size());
-        assertEquals(backend.lowering.LoweringFamily.CPU_NATIVE_REGION, lowered.units().getFirst().loweringFamily());
-        RegionExecutionPlan regionPlan = lowered.units().getFirst().requireRegionPlan();
-        CpuNativeRegionPayload payload = assertInstanceOf(CpuNativeRegionPayload.class, regionPlan.backendPayload());
-        assertEquals(List.of(2), payload.providerNodeIds());
-        assertEquals(List.of(3), payload.localKernelNodeIds());
-        assertEquals(List.of(3), regionPlan.boundaryOutputNodeIds());
-        assertEquals(2, regionPlan.executionGroups().size());
-        assertEquals(backend.lowering.region.RegionExecutionKind.PROVIDER_CALL, regionPlan.executionGroups().get(0).executionKind());
-        assertEquals(backend.lowering.region.RegionExecutionKind.DIRECT_KERNEL, regionPlan.executionGroups().get(1).executionKind());
+        assertEquals(backend.lowering.LoweringFamily.DIRECT_KERNEL, lowered.units().getFirst().loweringFamily());
+        RegionExecutionPlan regionPlan = assertInstanceOf(RegionExecutionPlan.class, lowered.units().getFirst().artifact());
+        assertEquals("CPU1_MATMUL_RELU", regionPlan.executionGroups().getFirst().physicalKernel());
     }
 
     @Test
-    void cpuNativeProfileSchedulesViewAsRegionLocalAliasGroup() {
-        Assumptions.assumeTrue(OpenBlasRuntime.isFloat32GemmAvailable(), OpenBlasRuntime.unavailableReason());
-
-        Tensor a = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "a", DataType.FLOAT32);
-        Tensor b = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "b", DataType.FLOAT32);
-        Tensor out = a.matmul(b).reshape(32, 128).relu();
-
-        List<Tensor> graph = out.topologicalSort();
-        List<CompiledNode> compiledNodes = CompiledNode.snapshot(graph, BackendIntentPlan.empty());
-        Partition partition = partition(
-                "cpu-native-view",
-                PartitionTarget.CPU,
-                List.of(2, 3, 4),
-                List.of(0, 1),
-                List.of(GraphValueRef.node(4)),
-                List.of(GraphValueRef.node(4))
-        );
-        OptimizedRegion region = new DefaultRegionOptimizer().optimize(partition, new RegionOptimizationContext(compiledNodes, FuseConfig.inferenceDefaults()));
-
-        CpuRegionLowerer lowerer = new CpuRegionLowerer();
-        LoweringResult result = lowerer.lower(new LoweringRequest(
-                region,
-                MemoryPlanner.plan(graph),
-                new BackendCapabilities(Set.of(ComputeBackend.CPU)),
-                new LoweringContext(openBlasRuntime(CpuStorageProfile.CPU_NATIVE), compiledNodes, CompiledTensorDescriptorBuilder.build(compiledNodes), java.util.Map.of())
-        ));
-
-        RegionExecutionPlan regionPlan = result.loweredRegion().units().getFirst().requireRegionPlan();
-        assertEquals(backend.lowering.LoweringFamily.CPU_NATIVE_REGION, result.loweredRegion().units().getFirst().loweringFamily());
-        assertEquals(3, regionPlan.executionGroups().size());
-        assertEquals(backend.lowering.region.RegionExecutionKind.PROVIDER_CALL, regionPlan.executionGroups().get(0).executionKind());
-        assertEquals(backend.lowering.region.RegionExecutionKind.VIEW, regionPlan.executionGroups().get(1).executionKind());
-        assertEquals(backend.lowering.region.RegionExecutionKind.DIRECT_KERNEL, regionPlan.executionGroups().get(2).executionKind());
-        assertEquals(List.of(3), regionPlan.executionGroups().get(1).orderedNodeIds());
-    }
-
-    @Test
-    void cpuNativeRegionPlanPreservesMultipleBoundaryOutputs() {
-        Assumptions.assumeTrue(OpenBlasRuntime.isFloat32GemmAvailable(), OpenBlasRuntime.unavailableReason());
-
-        Tensor a = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "a", DataType.FLOAT32);
-        Tensor b = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "b", DataType.FLOAT32);
-        Tensor matmul = a.matmul(b);
-        Tensor relu = matmul.relu();
-
-        List<Tensor> graph = relu.topologicalSort();
-        List<CompiledNode> compiledNodes = CompiledNode.snapshot(graph, BackendIntentPlan.empty());
-        Partition partition = partition(
-                "cpu-native-multi-boundary",
-                PartitionTarget.CPU,
-                List.of(2, 3),
-                List.of(0, 1),
-                List.of(GraphValueRef.node(2), GraphValueRef.node(3)),
-                List.of(GraphValueRef.node(2), GraphValueRef.node(3))
-        );
-        OptimizedRegion region = new DefaultRegionOptimizer().optimize(partition, new RegionOptimizationContext(compiledNodes, FuseConfig.inferenceDefaults()));
-
-        CpuRegionLowerer lowerer = new CpuRegionLowerer();
-        LoweringResult result = lowerer.lower(new LoweringRequest(
-                region,
-                MemoryPlanner.plan(graph),
-                new BackendCapabilities(Set.of(ComputeBackend.CPU)),
-                new LoweringContext(openBlasRuntime(CpuStorageProfile.CPU_NATIVE), compiledNodes, CompiledTensorDescriptorBuilder.build(compiledNodes), java.util.Map.of())
-        ));
-
-        RegionExecutionPlan regionPlan = result.loweredRegion().units().getFirst().requireRegionPlan();
-        assertEquals(backend.lowering.LoweringFamily.CPU_NATIVE_REGION, result.loweredRegion().units().getFirst().loweringFamily());
-        assertEquals(List.of(2, 3), regionPlan.boundaryOutputNodeIds());
-        assertEquals(3, regionPlan.anchorNodeId());
-        assertEquals(backend.lowering.region.RegionRole.BOUNDARY_OUTPUT, regionPlan.nodePlans().get(0).regionRole());
-        assertEquals(backend.lowering.region.RegionRole.BOUNDARY_OUTPUT, regionPlan.nodePlans().get(1).regionRole());
-    }
-
-    @Test
-    void cpuNativeCompareBoundaryUsesCpuArrayStorageContract() {
-        Assumptions.assumeTrue(OpenBlasRuntime.isFloat32GemmAvailable(), OpenBlasRuntime.unavailableReason());
-
-        Tensor a = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "a", DataType.FLOAT32);
-        Tensor b = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "b", DataType.FLOAT32);
-        Tensor threshold = new Tensor(new float[64], new int[]{64, 1}, null, "threshold", DataType.FLOAT32);
-        Tensor out = a.matmul(b).greaterThan(threshold);
-
-        List<Tensor> graph = out.topologicalSort();
-        List<CompiledNode> compiledNodes = CompiledNode.snapshot(graph, BackendIntentPlan.empty());
-        int matmulNodeId = nodeId(compiledNodes, Operation.OpType.MATMUL);
-        int compareNodeId = nodeId(compiledNodes, Operation.OpType.GT);
-        List<Integer> externalInputNodeIds = externalInputNodeIds(compiledNodes, matmulNodeId, compareNodeId);
-        Partition partition = partition(
-                "cpu-native-compare-boundary",
-                PartitionTarget.CPU,
-                List.of(matmulNodeId, compareNodeId),
-                externalInputNodeIds,
-                List.of(GraphValueRef.node(compareNodeId)),
-                List.of(GraphValueRef.node(compareNodeId))
-        );
-        OptimizedRegion region = new DefaultRegionOptimizer().optimize(partition, new RegionOptimizationContext(compiledNodes, FuseConfig.inferenceDefaults()));
-
-        CpuRegionLowerer lowerer = new CpuRegionLowerer();
-        LoweringResult result = lowerer.lower(new LoweringRequest(
-                region,
-                MemoryPlanner.plan(graph),
-                new BackendCapabilities(Set.of(ComputeBackend.CPU)),
-                new LoweringContext(openBlasRuntime(CpuStorageProfile.CPU_NATIVE), compiledNodes, CompiledTensorDescriptorBuilder.build(compiledNodes), java.util.Map.of())
-        ));
-
-        RegionExecutionPlan regionPlan = result.loweredRegion().units().getFirst().requireRegionPlan();
-        assertEquals(backend.lowering.LoweringFamily.CPU_NATIVE_REGION, result.loweredRegion().units().getFirst().loweringFamily());
-        assertEquals(backend.lowering.region.RegionStorageContract.CPU_ARRAY, regionPlan.nodePlans().get(1).storageContract());
-        assertEquals(backend.lowering.region.RegionStorageContract.MIXED_BOUNDARY, regionPlan.executionGroups().get(1).storageContract());
-        assertEquals(backend.lowering.region.RegionRole.BOUNDARY_OUTPUT, regionPlan.nodePlans().get(1).regionRole());
-    }
-
-    @Test
-    void cpuNativeSubregionCanStartAfterUnsupportedPrefixInsideCpuRegion() {
-        Assumptions.assumeTrue(OpenBlasRuntime.isFloat32GemmAvailable(), OpenBlasRuntime.unavailableReason());
-
-        Tensor prefixInput = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "prefix", DataType.FLOAT32);
-        Tensor a = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "a", DataType.FLOAT32);
-        Tensor b = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "b", DataType.FLOAT32);
-        Tensor nativeRelu = a.matmul(b).relu();
-        Tensor out = prefixInput.erf().add(nativeRelu.erf());
-
-        List<Tensor> graph = out.topologicalSort();
-        List<CompiledNode> compiledNodes = CompiledNode.snapshot(graph, BackendIntentPlan.empty());
-        int matmulNodeId = nodeId(compiledNodes, Operation.OpType.MATMUL);
-        int reluNodeId = nodeId(compiledNodes, Operation.OpType.RELU);
-        int addNodeId = nodeId(compiledNodes, Operation.OpType.ADD);
-        int suffixErfNodeId = compiledNodes.stream()
-                .filter(node -> node.operation() != null
-                        && node.operation().opType() == Operation.OpType.ERF
-                        && node.inputIds().contains(reluNodeId))
-                .map(CompiledNode::id)
-                .findFirst()
-                .orElseThrow();
-        int prefixErfNodeId = compiledNodes.stream()
-                .filter(node -> node.operation() != null
-                        && node.operation().opType() == Operation.OpType.ERF
-                        && !node.inputIds().contains(reluNodeId))
-                .map(CompiledNode::id)
-                .findFirst()
-                .orElseThrow();
-        List<Integer> orderedNodeIds = List.of(prefixErfNodeId, matmulNodeId, reluNodeId, suffixErfNodeId, addNodeId);
-        Set<Integer> selectedNodeIds = Set.copyOf(orderedNodeIds);
-        Partition partition = partition(
-                "cpu-native-prefix-split",
-                PartitionTarget.CPU,
-                orderedNodeIds,
-                externalInputNodeIds(compiledNodes, orderedNodeIds),
-                List.of(GraphValueRef.node(addNodeId)),
-                List.of(GraphValueRef.node(addNodeId))
-        );
-        OptimizedRegion region = new OptimizedRegion(
-                partition.partitionId(),
-                partition,
-                partition.target(),
-                orderedNodeIds.stream()
-                        .map(nodeId -> singleOpUnit(partition, compiledNodes, nodeId, selectedNodeIds))
-                        .toList(),
-                List.of(),
-                List.of(GraphValueRef.node(addNodeId)),
-                new RegionOptimizationTrace(List.of("test-native-prefix-split"))
-        );
-
-        CpuRegionLowerer lowerer = new CpuRegionLowerer();
-        LoweringResult result = lowerer.lower(new LoweringRequest(
-                region,
-                MemoryPlanner.plan(graph),
-                new BackendCapabilities(Set.of(ComputeBackend.CPU)),
-                new LoweringContext(openBlasRuntime(CpuStorageProfile.CPU_NATIVE), compiledNodes, CompiledTensorDescriptorBuilder.build(compiledNodes), java.util.Map.of())
-        ));
-
-        LoweredRegion lowered = result.loweredRegion();
-        assertEquals(4, lowered.units().size());
-        assertEquals(List.of(prefixErfNodeId), lowered.units().get(0).orderedNodeIds());
-        assertEquals(backend.lowering.LoweringFamily.CPU_NATIVE_REGION, lowered.units().get(1).loweringFamily());
-        assertEquals(List.of(matmulNodeId, reluNodeId), lowered.units().get(1).orderedNodeIds());
-        assertEquals(List.of(suffixErfNodeId), lowered.units().get(2).orderedNodeIds());
-        assertEquals(List.of(addNodeId), lowered.units().get(3).orderedNodeIds());
-
-        RegionExecutionPlan nativePlan = lowered.units().get(1).requireRegionPlan();
-        CpuNativeRegionPayload payload = assertInstanceOf(CpuNativeRegionPayload.class, nativePlan.backendPayload());
-        assertEquals(List.of(matmulNodeId), payload.providerNodeIds());
-        assertEquals(List.of(reluNodeId), payload.localKernelNodeIds());
-        assertEquals(List.of(reluNodeId), nativePlan.boundaryOutputNodeIds());
-    }
-
-    @Test
-    void autoProfileRejectsNativeRegionWhenLocalKernelIsOnlySlowSegmentKernel() {
-        Assumptions.assumeTrue(OpenBlasRuntime.isFloat32GemmAvailable(), OpenBlasRuntime.unavailableReason());
-
+    void autoProfileUsesCpu1MatmulReluSpecializationForExactPostOpPartition() {
         Tensor a = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "a", DataType.FLOAT32);
         Tensor b = new Tensor(new float[64 * 64], new int[]{64, 64}, null, "b", DataType.FLOAT32);
         Tensor out = a.matmul(b).relu();
@@ -383,7 +237,12 @@ class CpuRegionLowererTest {
                 new LoweringContext(openBlasRuntime(CpuStorageProfile.AUTO), compiledNodes, CompiledTensorDescriptorBuilder.build(compiledNodes), java.util.Map.of())
         ));
 
-        assertEquals(backend.lowering.LoweringFamily.BLAS, result.loweredRegion().units().getFirst().loweringFamily());
+        assertEquals(backend.lowering.LoweringFamily.DIRECT_KERNEL, result.loweredRegion().units().getFirst().loweringFamily());
+        RegionExecutionPlan regionPlan = assertInstanceOf(
+                RegionExecutionPlan.class,
+                result.loweredRegion().units().getFirst().artifact()
+        );
+        assertEquals("CPU1_MATMUL_RELU", regionPlan.executionGroups().getFirst().physicalKernel());
     }
 
     @Test
@@ -471,81 +330,6 @@ class CpuRegionLowererTest {
         );
     }
 
-    private static int nodeId(List<CompiledNode> compiledNodes, Operation.OpType opType) {
-        return compiledNodes.stream()
-                .filter(node -> node.operation() != null && node.operation().opType() == opType)
-                .map(CompiledNode::id)
-                .findFirst()
-                .orElseThrow();
-    }
-
-    private static List<Integer> externalInputNodeIds(List<CompiledNode> compiledNodes, int matmulNodeId, int compareNodeId) {
-        CompiledNode matmul = compiledNodes.stream()
-                .filter(node -> node.id() == matmulNodeId)
-                .findFirst()
-                .orElseThrow();
-        CompiledNode compare = compiledNodes.stream()
-                .filter(node -> node.id() == compareNodeId)
-                .findFirst()
-                .orElseThrow();
-        java.util.LinkedHashSet<Integer> inputs = new java.util.LinkedHashSet<>(matmul.inputIds());
-        compare.inputIds().stream()
-                .filter(id -> id != matmulNodeId)
-                .forEach(inputs::add);
-        return List.copyOf(inputs);
-    }
-
-    private static List<Integer> externalInputNodeIds(List<CompiledNode> compiledNodes, List<Integer> selectedNodeIds) {
-        Set<Integer> selected = Set.copyOf(selectedNodeIds);
-        java.util.LinkedHashSet<Integer> inputs = new java.util.LinkedHashSet<>();
-        for (int nodeId : selectedNodeIds) {
-            compiledNodes.stream()
-                    .filter(node -> node.id() == nodeId)
-                    .findFirst()
-                    .orElseThrow()
-                    .inputIds()
-                    .stream()
-                    .filter(inputId -> !selected.contains(inputId))
-                    .forEach(inputs::add);
-        }
-        return List.copyOf(inputs);
-    }
-
-    private static ExecutionUnit singleOpUnit(
-            Partition partition,
-            List<CompiledNode> compiledNodes,
-            int nodeId,
-            Set<Integer> selectedNodeIds
-    ) {
-        CompiledNode node = compiledNodes.stream()
-                .filter(candidate -> candidate.id() == nodeId)
-                .findFirst()
-                .orElseThrow();
-        return new ExecutionUnit(
-                partition.partitionId() + "-unit-" + nodeId,
-                ExecutionUnitKind.UNIT_KERNEL,
-                partition.target(),
-                node.inputIds().stream()
-                        .filter(selectedNodeIds::contains)
-                        .map(GraphValueRef::node)
-                        .toList(),
-                List.of(GraphValueRef.node(nodeId)),
-                partition.requiredMaterializedValueRefs().contains(GraphValueRef.node(nodeId))
-                        ? List.of(GraphValueRef.node(nodeId))
-                        : List.of(),
-                partition.outputValueRefs().contains(GraphValueRef.node(nodeId))
-                        || partition.requiredMaterializedValueRefs().contains(GraphValueRef.node(nodeId))
-                        ? List.of()
-                        : List.of(GraphValueRef.node(nodeId)),
-                List.of(nodeId),
-                Math.max(1L, node.flatDataSize()),
-                node.inputIds().stream()
-                        .filter(inputId -> !selectedNodeIds.contains(inputId))
-                        .toList(),
-                new RegionOptimizationTrace(List.of("test-single-op:" + nodeId))
-        );
-    }
-
     private static RuntimeConfig openBlasRuntime(CpuStorageProfile profile) {
         return new RuntimeConfig(
                 KernelTuningConfig.defaultsInference(),
@@ -561,5 +345,23 @@ class CpuRegionLowererTest {
                         false
                 )
         ).withCpuStorageProfile(profile);
+    }
+
+    private static int nodeId(List<CompiledNode> nodes, Operation.OpType opType) {
+        return nodes.stream()
+                .filter(node -> node.operation() != null && node.operation().opType() == opType)
+                .map(CompiledNode::id)
+                .findFirst()
+                .orElseThrow();
+    }
+
+    private static List<Integer> externalInputNodeIds(List<CompiledNode> nodes, List<Integer> selectedNodeIds) {
+        java.util.Set<Integer> selected = java.util.Set.copyOf(selectedNodeIds);
+        java.util.LinkedHashSet<Integer> out = new java.util.LinkedHashSet<>();
+        for (int nodeId : selectedNodeIds) {
+            CompiledNode node = nodes.stream().filter(candidate -> candidate.id() == nodeId).findFirst().orElseThrow();
+            node.inputIds().stream().filter(inputId -> !selected.contains(inputId)).forEach(out::add);
+        }
+        return List.copyOf(out);
     }
 }
